--- a/src/Services/Discount.API/appsettings.json
+++ b/src/Services/Discount.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DiscountDB": "Server=localhost;Port=5432;Database=DiscountDB;User Id=postgres;Password=Admin1234"
+    "DiscountDB": "Server=localhost;Port=5432;Database=DiscountDB;User Id=postgres;Password=Rubel123@@##"
   },
   "Logging": {
     "LogLevel": {
