--- a/src/Services/Discount.Grpc/appsettings.json
+++ b/src/Services/Discount.Grpc/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DiscountDB": "Server=localhost;Port=5432;Database=DiscountDB;User Id=postgres;Password=Admin1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
